[menu/datatable tab_type + tab_value] fix

--- a/app/views/configurations/index.html.erb
+++ b/app/views/configurations/index.html.erb
@@ -1,17 +1,16 @@
 <!-- index page of resources -->
 
-
-
-
 <div class="col-md-12">
-
-
     <div class="row">
       <%= render 'menu' %>
     </div>
-
 	<div class="well row text-center">
 	  <h4>Click on a resource to configure.</h4>
 	  <%= image_tag "/images/icons/cupboard.png",{size: "400x400", style: "padding-top: 50px;"} %>
 	</div>
 </div>
+
+<script>
+acttm("configurations");
+</script>
+
