--- a/app/views/people/index.html.erb
+++ b/app/views/people/index.html.erb
@@ -1,7 +1,7 @@
 
 <%= render 'shared/core_index', model: "Person",
                          new: "new_person_path",
-                         tab: "PersonType" %>
+                         tab: @tab_type %>
 
 
 
