--- a/app/views/registrations/index.html.erb
+++ b/app/views/registrations/index.html.erb
@@ -1,7 +1,7 @@
 
 <%= render 'shared/core_index', model: "Registration",
                          new: "new_registration_path",
-                         tab: "ApplicationStatus" %>
+                         tab: @tab_type %>
 
 
 
