--- a/app/views/shared/_resources.html.erb
+++ b/app/views/shared/_resources.html.erb
@@ -68,4 +68,5 @@
 <!-- To activate the currently clicked resource menu -->
 <script>
 $(".col-md-3 > ul.nav-pills > li#<%= resource_disp1.underscore.tr(" ","_") %>").attr('class','active');
+acttm("configurations");
 </script>
