--- a/app/views/partners/_people.html.erb
+++ b/app/views/partners/_people.html.erb
@@ -8,7 +8,7 @@
   <% a = i %>
   
   <div class="row border-b">
-    <h4> <%= link_to a.name, a %> <span class="sm"> Click here for detailed view</span></h4>
+    <h4> <%= link_to a.name, a, {:target => "_blank"} %> <span class="sm"> Click here for detailed view</span></h4>
 
   </div>
   <br/>
