--- a/app/assets/stylesheets/typeahead.css
+++ b/app/assets/stylesheets/typeahead.css
@@ -5,7 +5,7 @@
 
 .tt-dropdown-menu {
   color: #000000;
-  min-width: 260px;
+  min-width: 400px;
   margin-top: 2px;
   padding: 5px 0;
   background-color: #fff;
@@ -48,3 +48,5 @@
 .tt-suggestion p {
   margin: 0;
 }
+
+.tt-dropdown-menu .active {background-color: #ffffff !important;}
