--- a/app/views/branches/index.html.erb
+++ b/app/views/branches/index.html.erb
@@ -60,7 +60,7 @@
 </div>
 </div>
 <script type="text/javascript">
- actmm("configuration");
+ acttm("configuration");
  actsm("branch");
 
 </script>
