--- a/app/views/partners/_form.html.erb
+++ b/app/views/partners/_form.html.erb
@@ -59,7 +59,7 @@
                           <% set = "active-link" %>
                         <% end %>
                         <div class="col-xs-2 text-center top-link <%= set %>">
-                          <a href="#" part="<%= i + 1 %>"><%= elem.to_s.titleize %></a>
+                          <a href="#" part="<%= i + 1 %>" class="<%= elem.to_s %>"><%= elem.to_s.titleize %></a>
                         </div>
                     <% end %>
                   </div>
