--- a/app/views/partners/_students.html.erb
+++ b/app/views/partners/_students.html.erb
@@ -3,17 +3,19 @@
           <table class="table table-striped">
             <thead>
               <tr>
+                <th>Ref No</th>
                 <th>Name</th>
-                <th>Email</th>
-                <th>Mobile</th>
+                <th>Parter Type</th>
+                <th>Parter Name</th>
               </tr>
             </thead>
             <tbody>
               <% obj.registrations.each do |a| %>
                 <tr>
+                  <td><%= a.ref_no %></td>
                   <td><%= a.name %></td>
-                  <td><%= a.email %></td>
-                  <td><%= a.mobile1 %></td>
+                  <td><%= obj.try_chain(:type,:name) %></td>
+                  <td><%= obj.name %></td>
                 </tr>
               <% end %>
             </tbody>
