--- a/app/views/user_configs/_progress_fu_start.html.erb
+++ b/app/views/user_configs/_progress_fu_start.html.erb
@@ -1,9 +1,13 @@
 <!-- to update the follow up assignment of the progression -->
 <div id='resource-container'></div>
-  <h6 class="small">For progression(2nd year/3rd year) the follow up will be assigned to
+<div class="row col-xs-12 blue-well0 text-center">
+  <h4> For progression(2nd year/3rd year) the follow up will be assigned to<br/>
+    <br/>
   <span id="prog-ass-to">
-  <%= link_to current_user.prog_fu_ass_to,'#' %>
+    <b><%= current_user.prog_fu_ass_to %></b>
   </span>
-  <%= link_to 'change','/user_configs/edit_prog_fu_ass_to',
-                       {class: 'clickable',id: 'progress-fu', remote: true} %>
-  </h6>
+
+  <%= link_to 'click here to change user','/user_configs/edit_prog_fu_ass_to',
+                       {class: 'registration',id: 'progress-fu', remote: true} %>
+  </h4>
+</div>
