--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,19 +1,41 @@
-<h2>Change your password</h2>
+<div class="container main">
+  <div class="row">
+    <%= simple_form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => {:method => 'put', class: "form-horizontal" }) do |f| %>
+    <%= devise_error_messages! %>
+    <div class="row well">
+      <div class="row">
+        <div class="col-xs-8 text-center">
+          <h1>Change your password</h1>
+        </div>
+      </div>
+      <br/>
 
-<%= simple_form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :put }) do |f| %>
-  <%= f.error_notification %>
-
-  <%= f.input :reset_password_token, :as => :hidden %>
-  <%= f.full_error :reset_password_token %>
-
-  <div class="form-inputs">
-    <%= f.input :password, :label => "New password", :required => true, :autofocus => true %>
-    <%= f.input :password_confirmation, :label => "Confirm your new password", :required => true %>
+      <%= f.input :reset_password_token, :as => :hidden %>
+      <%= f.full_error :reset_password_token %>
+      <%= bs(f,"password","password_field",['password',4],8,8) %>
+      <%= bs(f,"password_confirmation","password_field",['password_confirmation',4],8,8) %>
+      <div class=" form-group col-xs-8 text-right">
+        <%= f.submit "submit", :id => "change-password", class: "btn btn-primary" %>
+      </div>
+    </div>
+    <% end %>
   </div>
+</div>
 
-  <div class="form-actions">
-    <%= f.button :submit, "Change my password" %>
-  </div>
-<% end %>
+<%#= render "devise/shared/links" %>
 
-<%= render "devise/shared/links" %>
+<script>
+$('#change-password').click(function(){
+  var id = $(".form-horizontal").attr('id');
+  var resource_name = id.split("_")[1];
+  var password = $('#'+resource_name+'_password').val();
+  var password_confirmation = $('#'+resource_name+'_password_confirmation').val();
+  if ( password != "" && password === password_confirmation) {
+    return true;
+  }
+  else {
+    alert("Password confirmation doesn't match Password");
+    return false;
+  }
+});
+</script>
