--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -1,16 +1,19 @@
-<h2>Resend confirmation instructions</h2>
-
-<%= simple_form_for(resource, :as => resource_name, :url => confirmation_path(resource_name), :html => { :method => :post }) do |f| %>
-  <%= f.error_notification %>
-  <%= f.full_error :confirmation_token %>
-
-  <div class="form-inputs">
-    <%= f.input :email, :required => true, :autofocus => true %>
+<div class="container main">
+  <div class="row">
+    <%= simple_form_for(resource, :as => resource_name, :url => confirmation_path(resource_name), :html => { :method => :post, class: "form-horizontal" }) do |f| %>
+      <%= f.error_notification %>
+      <%= f.full_error :confirmation_token %>
+      <div class="row well">
+        <div class="row">
+          <div class="col-xs-8 text-center">
+            <h1>Resend confirmation instructions</h1>
+          </div>
+        </div>
+        <%= bs(f,"email","email_field",['email',4],8,8) %>
+        <div class=" form-group col-xs-8 text-right">
+          <%= f.submit "submit", class: "btn btn-primary" %>
+        </div>
+      </div>
+    <% end %>
   </div>
-
-  <div class="form-actions">
-    <%= f.button :submit, "Resend confirmation instructions" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
