--- a/app/views/application_statuses/_form.html.erb
+++ b/app/views/application_statuses/_form.html.erb
@@ -1,12 +1,24 @@
-<%= simple_form_for(@application_status) do |f| %>
-  <%= f.error_notification %>
-
-  <div class="form-inputs">
-    <%= f.input :name %>
-    <%= f.input :desc %>
+<!-- edit only Application Status -->
+<div class="row">
+  <div class="<%= div %>">
+    <%= form_for(new_resource, html: {class: 'form-horizontal'}) do |f| %>
+      <% if h == "New" %>
+        <h4 class="form-heading"><%= h %> <%= resource_disp1 %></h4>
+        <br/>
+      <% end %>
+      <%= bs(f,"name","text_field",[nil,3],6) %>
+      <%= bs(f,[:email_template_id,EmailTemplate.order(:name),
+        :id,
+        :name,
+        {prompt: "-email template-"},{}],
+        "collection_select",
+        [nil,3],6) %>
+      <%= bs(f,[:desc,{class: 'form-control', cols: nil, rows: nil}],"text_area",[nil,3],6) %>
+      <div class="form-group form-last">
+        <div class="col-sm-offset-3 col-sm-5">
+          <%= f.submit "Save", {class: "btn btn-primary"} %>
+        </div>
+      </div>
+    <% end %>
   </div>
-
-  <div class="form-actions">
-    <%= f.button :submit %>
-  </div>
-<% end %>
+</div>
