--- a/app/views/people/edit.html.erb
+++ b/app/views/people/edit.html.erb
@@ -1,6 +1,1 @@
-<h1>Editing person</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Show', @person %> |
-<%= link_to 'Back', people_path %>
+<%= render 'form', what: "Edit",link: (link_to(@person.first_name, person_path(@person))) %>
