--- a/app/views/people/new.html.erb
+++ b/app/views/people/new.html.erb
@@ -1,12 +1,5 @@
-<h1>New person</h1>
-
-<%= render 'form' %>
+<%= render 'form', what: "New", link: "" %>
 
 <% flash[:notice] = @person.errors.full_messages.join(" ,")  rescue nil %>
 
 <%= link_to 'Back', people_path %>
-
-
-
-
-
