partners login + new person form + application_status notify + config menu

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -542,7 +542,7 @@ vertical-align: top;
 
 #header-partners{
     height: 70px;
-    background-color: #6B3636;
+    background-color: rgb(54, 107, 77);
     color: #FFFFFF;
 }
 
