--- a/app/views/configurations/_menu.html.erb
+++ b/app/views/configurations/_menu.html.erb
@@ -1,11 +1,11 @@
 <!-- All resources to configure -->
     <div class="row row-top">
-      <h3>Configuration</h3>
+      <h3>System Configuration</h3>
     </div>
 
 <!-- Single button -->
 <div class="form-group">
-  <% tertiaries = [:branch, :partner_type, :student_source, :application_status] %>
+  <% tertiaries = [:branch, :partner_type, :student_source, :application_status, :email_template] %>
     <div class="btn-group">
       <button data-toggle="dropdown" class="btn btn-primary dropdown-toggle" type="button">Enquiry<span class="caret"></span></button>
       <ul role="menu" class="dropdown-menu">
