--- a/app/views/resources/_menu.html.erb
+++ b/app/views/resources/_menu.html.erb
@@ -1,90 +1,1 @@
-<!-- All resources to configure -->
-    <div class="row row-top">
-      <h3>Configuration</h3>
-    </div>
-
-<!-- Single button -->
-<div class="form-group">
-
-    <div class="btn-group">
-      <button data-toggle="dropdown" class="btn btn-primary dropdown-toggle" type="button">Enquiry<span class="caret"></span></button>
-      <ul role="menu" class="dropdown-menu">
-        <% [ :contact_type,:student_source,:enquiry_status].sort.each do |r| %>
-              <% if can? :read, r.to_s.camelize.constantize %>
-              <li>
-                 <%= link_to r.to_s.titleize.pluralize,"/secondaries/" + r.to_s %>
-              </li>
-              <% end %>
-        <% end %>
-      </ul>
-    </div><!-- /btn-group -->
-    <div class="btn-group">
-      <button data-toggle="dropdown" class="btn btn-success dropdown-toggle" type="button">Registration <span class="caret"></span></button>
-      <ul role="menu" class="dropdown-menu">
-        <% [:application_status,
-            :course_level,:course_subject,:doc_category,:required_doc,:required_doc_type,
-            :english_level,:exam_type,:qualification_name,:progression_status].sort.each do |r| %>
-              <% if can? :read, r.to_s.camelize.constantize %>
-              <li>
-                 <%= link_to r.to_s.titleize.pluralize,"/secondaries/" + r.to_s %>
-              </li>
-              <% end %>
-        <% end %>
-      </ul>
-    </div><!-- /btn-group -->
-    <div class="btn-group">
-      <button data-toggle="dropdown" class="btn btn-info dropdown-toggle" type="button">Partner<span class="caret"></span></button>
-      <ul role="menu" class="dropdown-menu">
-        <% [:partner_category,:partner_type,:partner_group,
-            :contract_doc_category,:commission_status,
-            :commission_claim_status,:processing_fee_type,
-            :processing_fee_status].each do |r| %>
-              <% if can? :read, r.to_s.camelize.constantize %>
-              <li>
-                 <%= link_to r.to_s.titleize.pluralize,"/secondaries/" + r.to_s %>
-              </li>
-              <% end %>
-        <% end %>
-      </ul>
-    </div><!-- /btn-group -->
-    <div class="btn-group">
-      <button data-toggle="dropdown" class="btn btn-warning dropdown-toggle" type="button">Actions <span class="caret"></span></button>
-      <ul role="menu" class="dropdown-menu">
-         <% [:event_type,:task_topic,:smtp,:email_template,].sort.each do |r| %>
-              <% if can? :read, r.to_s.camelize.constantize %>
-              <li>
-                 <%= link_to r.to_s.titleize.pluralize,"/secondaries/" + r.to_s %>
-              </li>
-              <% end %>
-        <% end %>
-      </ul>
-    </div><!-- /btn-group -->
-    <div class="btn-group">
-      <button data-toggle="dropdown" class="btn btn-default dropdown-toggle" type="button">Person<span class="caret"></span></button>
-      <ul role="menu" class="dropdown-menu">
-         <% [:person_type].sort.each do |r| %>
-              <% if can? :read, r.to_s.camelize.constantize %>
-              <li>
-                 <%= link_to r.to_s.titleize.pluralize,"/secondaries/" + r.to_s %>
-              </li>
-              <% end %>
-        <% end %>
-      </ul>
-    </div><!-- /btn-group -->
-    <div class="btn-group">
-      <button data-toggle="dropdown" class="btn btn-danger dropdown-toggle" type="button">User<span class="caret"></span></button>
-      <ul role="menu" class="dropdown-menu">
-         <% [:allow_ip,:branch,:role].sort.each do |r| %>
-              <% if can? :read, r.to_s.camelize.constantize %>
-              <li>
-                 <%= link_to r.to_s.titleize.pluralize,"/secondaries/" + r.to_s %>
-              </li>
-              <% end %>
-        <% end %>
-      </ul>
-    </div><!-- /btn-group -->
-  </div>
-<script>
-actmm('configuration')
-</script>
-<hr>
+<%= render 'configurations/menu' %>
